[package]
name = "RBFlix"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.32.2"
egui = "0.32.2"
reqwest = { version = "0.12.23", features = ["json", "multipart", "stream"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
image = "0.25.8"
open = "5.0"
serde_json = "1.0.143"
gstreamer = "0.24.1"
gstreamer-app = "0.24.0"
